--- a/themes/inhabitent/sass/_widgets.scss
+++ b/themes/inhabitent/sass/_widgets.scss
@@ -63,3 +63,7 @@
     margin-bottom: 4rem;
     border-top: 1px solid $color__background-hr;
 }
+
+.search-field {
+    text-transform: uppercase;
+}
