--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -68,7 +68,8 @@
     * btn-black
     ***************************************************/
     
-    .btn-black a {
+    .btn-black a,
+    a.read-more {
         border: 1px solid #000;
         color: #000;
         text-align: center;
