--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -4,6 +4,7 @@
     text-align: center;
     margin-top: 80px;
     text-transform: uppercase;
+    font-family: 'Novecento', sans-serif;
 }
 
 .footer-blocks {
