--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -397,16 +397,6 @@ table {
   border: 1px solid #000;
   padding: 12px 18px; }
 
-a.read-more.black-btn {
-  color: #000;
-  font-family: 'Novecento', sans-serif;
-  text-transform: uppercase;
-  font-size: .9rem; }
-  a.read-more.black-btn:hover {
-    color: #fff;
-    background: #248A83;
-    border: 1px solid #248A83; }
-
 .blog .entry-meta {
   background: #248A83;
   color: #fff;
@@ -764,7 +754,8 @@ a {
 /**************************************************
     * btn-black
     ***************************************************/
-.btn-black a {
+.btn-black a,
+a.read-more {
   border: 1px solid #000;
   color: #000;
   text-align: center;
@@ -774,7 +765,8 @@ a {
   padding: 12px 18px;
   font-size: .9rem;
   font-family: 'Novecento', sans-serif; }
-  .btn-black a:hover {
+  .btn-black a:hover,
+  a.read-more:hover {
     color: #fff;
     background: #248A83;
     border: 1px solid #248A83; }
@@ -929,7 +921,8 @@ object {
   bottom: 40px;
   text-align: center;
   margin-top: 80px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  font-family: 'Novecento', sans-serif; }
 
 .footer-blocks {
   letter-spacing: .2px;
