--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -67,6 +67,9 @@ table {
 }
 
 .blog {
+    .entry-header {
+        position: relative;
+    }
     .entry-meta {
         background: $color__green-brand;
         color: $color__background-body;
@@ -90,6 +93,8 @@ table {
         max-width: 40%;
         padding: .75rem 1.5rem;
         position: absolute;
+        bottom: 0;
+        right: 0;
         & a:hover {
             color: $color__yellow-brand;
         }
