--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -710,7 +710,7 @@ a {
   display: block; }
 
 .hentry {
-  margin: 0 0 1.5rem; }
+  margin: 0; }
 
 .updated:not(.published) {
   display: none; }
@@ -930,6 +930,62 @@ object {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
+
+.shop-top-menu-wrapper {
+  border-bottom: 1px dashed #ccc;
+  padding-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-transform: uppercase; }
+  .shop-top-menu-wrapper a {
+    color: #248A83;
+    font-size: 1.2rem;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-weight: 100;
+    font-family: 'Novecento', sans-serif; }
+    .shop-top-menu-wrapper a:hover {
+      color: black; }
+
+.post-type-archive h1 {
+  color: #404040;
+  font-size: 2.2rem;
+  letter-spacing: 2px;
+  margin-top: 110px;
+  text-align: center; }
+
+.price-info-wrapper .product-info {
+  background: #fff;
+  font-family: 'Merriweather', serif;
+  padding: 15px 5px 15px 5px;
+  border-top: 4px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-left: 1px solid #ccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around; }
+  .price-info-wrapper .product-info .dots-inside {
+    width: auto;
+    border-bottom: 1px dotted #404040;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin-bottom: 6px;
+    margin-left: 4px;
+    margin-right: 4px; }
+  .price-info-wrapper .product-info a {
+    color: #404040;
+    font-size: 1rem;
+    font-weight: 400; }
+  .price-info-wrapper .product-info p {
+    margin: 0; }
 
 .copy-right {
   position: relative;
