--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -431,8 +431,32 @@ table {
 .search h1.page-title {
   color: #404040;
   font-size: 2.3rem;
-  margin-top: 100px;
-  border-bottom: 1px solid #ccc; }
+  margin-top: 100px; }
+
+.archive h1 {
+  color: #404040;
+  font-size: 2.2rem;
+  letter-spacing: 2px;
+  margin-top: 110px;
+  text-align: center; }
+
+.taxonomy-explain {
+  font-family: 'Merriweather', serif;
+  font-weight: 100;
+  color: #404040; }
+
+.product-grid-archive {
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-template-columns: 260px 260px 260px 260px;
+  grid-gap: 1.5rem;
+  margin-bottom: 4rem; }
+  .product-grid-archive .entry-header {
+    height: 260px;
+    overflow: hidden;
+    position: relative; }
 
 .search div.entry-summary {
   font-family: 'Merriweather', serif;
@@ -908,7 +932,9 @@ object {
       top: 50%;
       left: 50%;
       -webkit-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%); }
+              transform: translate(-50%, -50%);
+      width: 520px;
+      height: auto; }
   .products-grid-wrapper .product-info {
     border: 1px solid #e1e1e1;
     background-color: #e1e1e1; }
@@ -961,7 +987,7 @@ object {
 .price-info-wrapper .product-info {
   background: #fff;
   font-family: 'Merriweather', serif;
-  padding: 15px 5px 15px 5px;
+  padding: 15px 15px;
   border-top: 4px solid #ccc;
   border-right: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
@@ -1124,6 +1150,17 @@ input[type=search] {
   .home .site-header .logo-green,
   .page-template-about .site-header .logo-green {
     display: none; }
+
+.site-header .search-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.site-header .search-field {
+  display: none; }
+
+.site-header .search-field-focus {
+  display: block; }
 
 body {
   font-size: 16px; }
