--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -83,11 +83,19 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 520px;
+            width: 460px;
             height: auto;
             // max-width: 300px;
         }
     }
+    // .entry-header img {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 50%;
+    //     transform: translate(-50%, -50%);
+    //     width: 460px;
+    //     height: auto;
+    // }
     .product-info {
         border: 1px solid #e1e1e1;
         background-color: #e1e1e1;
@@ -101,6 +109,15 @@
     .type-product img {
         object-fit: cover;
     }
+}
+
+.product-grid-archive .entry-header img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 460px;
+    height: auto;
 }
 
 .page-header {
