--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -112,7 +112,7 @@ table {
 
 .archive h1 {
     color: $color__text-main;
-    font-size: 2.2rem;
+    font-size: 2.4rem;
     letter-spacing: 2px;
     margin-top: 110px;
     text-align: center;
@@ -123,6 +123,10 @@ table {
     font-family: 'Merriweather', serif;
     font-weight: 100;
     color: $color__text-main;
+    text-align: center;
+    border-bottom: 1px dashed #ccc;
+    padding-bottom: 56px;
+    margin-bottom: -30px;
 }
 
 .product-grid-archive {
@@ -131,7 +135,7 @@ table {
     justify-content: center;
     grid-template-columns: 260px 260px 260px 260px;
     grid-gap: 1.5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
     .entry-header {
         height: 260px;
         overflow: hidden;
