--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -78,7 +78,7 @@
         height: auto;
         padding: 12px 18px;
         font-size: .9rem;
-        font-family: 'Novecento', sans-serif;
+        font-family: 'Novecentos', sans-serif;
         &:hover {
             color: $color__background-body;
             background: $color__green-brand;
@@ -103,4 +103,8 @@
             width: 260px;
             height: auto;
         }
+    }
+    
+    .type-post .entry-header {
+        margin-top: 3rem;
     }
