--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -48,17 +48,11 @@
     }
 }
 
-// .prim-second-wrapper {
-//     margin-left: auto;
-//     margin-right: auto;
-//     max-width: 1120px;
-//     display: grid;
-//     grid-template-columns: 2fr 1fr;
-//     background: rgb(212, 247, 203);
-//     #primary .entry-content {
-//         width: 640px;
-//     }
-// }
+.type-post .entry-content p:nth-child(2) {
+    margin-bottom: 5rem;
+    margin-top: 2rem;
+}
+
 .prim-second-wrapper {
     display: flex;
     margin-left: auto;
@@ -142,7 +136,7 @@
         padding-left: 20px;
         padding-right: 20px;
         font-weight: 100;
-        font-family: 'Novecento', sans-serif;
+        font-family: 'Novecentos', sans-serif;
         &:hover {
             color: black;
         }
