--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -139,7 +139,7 @@ body {
 }
 
 .entry-title {
-    margin: 1.5rem;
+    margin: 0px;
     position: relative;
     z-index: 2;
 }
@@ -192,7 +192,7 @@ li {
     border-radius: 0;
     color: #fff;
     cursor: pointer;
-    font-family: 'Novecento', sans-serif;
+    font-family: 'Novecentos', sans-serif;
     font-size: 14.4px;
     font-size: .9rem;
     line-height: 1;
