--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-    // background: rgb(172, 172, 172);
-    background: $color__background-body;
+    background: rgb(172, 172, 172);
+    // background: $color__background-body;
     /* Fallback for when there is no custom background color defined. */
 }
 
@@ -83,6 +83,7 @@ table {
     }
     .entry-title {
         font-family: 'Merriweather', serif;
+        color: $color__green-brand;
     }
     img {
         height: auto;
