--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -358,7 +358,7 @@ html {
           box-sizing: inherit; }
 
 body {
-  background: #fff;
+  background: #acacac;
   /* Fallback for when there is no custom background color defined. */ }
 
 a {
@@ -412,7 +412,8 @@ table {
   padding: 4px 17px; }
 
 .blog .entry-title {
-  font-family: 'Merriweather', serif; }
+  font-family: 'Merriweather', serif;
+  color: #248A83; }
 
 .blog img {
   height: auto;
@@ -778,7 +779,7 @@ a {
 
 .seperate-entries img {
   width: 360px;
-  height: 245px; }
+  height: 246px; }
 
 .big-title {
   text-align: center;
@@ -810,6 +811,37 @@ a.read-more {
 /**************************************************
     * btn-black
     ***************************************************/
+.page-template-default .btn-black a {
+  position: absolute;
+  bottom: 11px; }
+
+.front-post-info-wrapper {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: justify;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  padding: .75rem;
+  border: 1px solid #e1e1e1;
+  border-top-width: 5px;
+  height: 170px;
+  position: relative;
+  bottom: 5px; }
+  .front-post-info-wrapper .entry-title {
+    line-height: 1.6rem; }
+    .front-post-info-wrapper .entry-title a {
+      color: #248A83; }
+      .front-post-info-wrapper .entry-title a:hover {
+        color: black; }
+  .front-post-info-wrapper .entry-meta {
+    margin: 5px;
+    font-family: 'Merriweather', serif;
+    font-size: .8rem; }
+  .front-post-info-wrapper h2 {
+    font-size: 1.3rem; }
+
 .content-whole {
   margin-left: auto;
   margin-right: auto;
