--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -34,6 +34,9 @@
         left: 50%;
         transform: translate(-50%, -50%);
     }
+    .page-template-about .entry-content p:nth-child(6) {
+        margin-bottom: 3rem;
+    }
     .entry-content {
         margin-left: auto;
         margin-right: auto;
@@ -43,14 +46,13 @@
         font-family: 'Merriweather', Courier, serif;
         h2 {
             text-align: center;
-            font-size: 2rem;
+            font-size: 2.1rem;
         }
     }
-}
-
-.type-post .entry-content p:nth-child(2) {
-    margin-bottom: 5rem;
-    margin-top: 2rem;
+    .entry-content p:nth-child(6) {
+        margin-bottom: 5rem;
+        margin-top: 2rem;
+    }
 }
 
 .prim-second-wrapper {
@@ -82,14 +84,6 @@
             // max-width: 300px;
         }
     }
-    // .entry-header img {
-    //     position: absolute;
-    //     top: 50%;
-    //     left: 50%;
-    //     transform: translate(-50%, -50%);
-    //     width: 460px;
-    //     height: auto;
-    // }
     .product-info {
         border: 1px solid #e1e1e1;
         background-color: #e1e1e1;
