--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -937,6 +937,9 @@ object {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
 
+#post-23 .page-template-about .entry-content p:nth-child(6) {
+  margin-bottom: 3rem; }
+
 #post-23 .entry-content {
   margin-left: auto;
   margin-right: auto;
@@ -946,9 +949,9 @@ object {
   font-family: 'Merriweather', Courier, serif; }
   #post-23 .entry-content h2 {
     text-align: center;
-    font-size: 2rem; }
+    font-size: 2.1rem; }
 
-.type-post .entry-content p:nth-child(2) {
+#post-23 .entry-content p:nth-child(6) {
   margin-bottom: 5rem;
   margin-top: 2rem; }
 
@@ -1226,6 +1229,90 @@ input[type=search] {
 
 .site-header .search-field-focus {
   display: block; }
+
+/*--------------------------------------------------------------
+# Error 404 page styling
+--------------------------------------------------------------*/
+.error-404 h1 {
+  color: #404040;
+  font-size: 2.3rem;
+  margin-top: 90px; }
+
+.error-404,
+.widget-area h2 {
+  color: #2f1339; }
+
+.error-404 {
+  font-family: 'Merriweather', serif; }
+  .error-404 a {
+    color: #248A83; }
+    .error-404 a:hover {
+      color: black; }
+
+.error-404 .search-field {
+  padding: .3rem;
+  color: #666;
+  background-color: #f4f4f4;
+  border: 1px solid #e1e1e1;
+  border-radius: 0; }
+
+.error-404 ::-webkit-input-placeholder {
+  text-transform: none;
+  color: #666;
+  font-family: 'Merriweather', serif; }
+
+.error-404 :-ms-input-placeholder {
+  text-transform: none;
+  color: #666;
+  font-family: 'Merriweather', serif; }
+
+.error-404 ::-ms-input-placeholder {
+  text-transform: none;
+  color: #666;
+  font-family: 'Merriweather', serif; }
+
+.error-404 ::placeholder {
+  text-transform: none;
+  color: #666;
+  font-family: 'Merriweather', serif; }
+
+.error-404 #archives-dropdown--1 {
+  font-family: Merriweather, serif; }
+
+.error-404 .site-main {
+  border-right: 1px solid #ccc;
+  padding-right: 5%;
+  width: 90%; }
+
+.error-404 .page-content {
+  margin-top: -2rem;
+  margin-bottom: 6.5rem;
+  line-height: 1.8rem; }
+
+.error-404 .search-form {
+  margin-bottom: 3rem; }
+
+.widget_recent_entries {
+  margin-bottom: 3rem; }
+
+.search-results h1:nth-child(1) {
+  border-bottom: 1px solid #ccc;
+  margin-top: 50px;
+  padding-bottom: 2rem;
+  padding-top: 5rem; }
+
+.search-results .entry-header a {
+  color: #248A83;
+  font-size: 2.2rem; }
+  .search-results .entry-header a:hover {
+    color: black; }
+
+.search-results .entry-summary {
+  margin-top: 1.2rem;
+  margin-bottom: 4rem; }
+
+.entry-summary p:nth-child(2) {
+  margin-top: 2rem; }
 
 body {
   font-size: 16px; }
