adding some style to single product page

--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-    background: rgb(172, 172, 172);
-    // background: $color__background-body;
+    // background: rgb(138, 125, 85);
+    background: $color__background-body;
     /* Fallback for when there is no custom background color defined. */
 }
 
