--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -65,6 +65,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "header";
 @import "error404";
 @import "search";
+@import "single";
 body {
     font-size: 16px;
 }
