--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -32,6 +32,7 @@ a {
     display: block;
     float: left;
     width: 100%;
+    height: 20%;
     ul {
         display: none;
         list-style: none;
