--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -358,7 +358,7 @@ html {
           box-sizing: inherit; }
 
 body {
-  background: #acacac;
+  background: #fff;
   /* Fallback for when there is no custom background color defined. */ }
 
 a {
@@ -556,7 +556,8 @@ a {
   clear: both;
   display: block;
   float: left;
-  width: 100%; }
+  width: 100%;
+  height: 20%; }
   .main-navigation ul {
     display: none;
     list-style: none;
@@ -1191,7 +1192,6 @@ input[type=search] {
     display: block; }
 
 .blog .search-submit,
-.page-template-default .search-submit,
 .archive .search-submit,
 .post-template-default .search-submit,
 .product-template-default .search-submit,
@@ -1313,6 +1313,86 @@ input[type=search] {
 
 .entry-summary p:nth-child(2) {
   margin-top: 2rem; }
+
+.post-template-default .entry-header h1 {
+  background: #248a83;
+  font-family: Novecentos, sans-serif;
+  font-size: 1.5rem;
+  letter-spacing: 2px;
+  margin-top: 2.25rem;
+  width: 460px;
+  padding: .75rem 1.5rem;
+  position: absolute;
+  top: 0;
+  right: 289px;
+  color: #fff;
+  position: absolute; }
+
+.post-template-default .entry-header {
+  position: relative; }
+
+.entry-meta {
+  background: #248a83;
+  color: #fff;
+  text-transform: uppercase;
+  width: 370px;
+  font-family: Novecentos, sans-serif;
+  position: absolute;
+  left: 271px;
+  bottom: 6px;
+  padding: 4px 17px; }
+
+.post-template-default .entry-content {
+  font-family: 'Merriweather', Courier, serif;
+  line-height: 1.7rem; }
+
+.sharing-button {
+  border: 1px solid #000;
+  padding: 10px 20px;
+  text-transform: uppercase; }
+  .sharing-button .fab {
+    font-size: .9rem;
+    color: #000; }
+
+a.sharing-button {
+  color: black; }
+  a.sharing-button:hover {
+    background: #248A83;
+    color: #fff; }
+    a.sharing-button:hover .fab {
+      color: #fff; }
+
+.comment-form .submit {
+  text-transform: uppercase;
+  border-radius: 0px;
+  border-color: #248A83;
+  background: #248A83;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: #fff;
+  font-size: 1rem;
+  padding: 10px 20px;
+  text-shadow: none; }
+  .comment-form .submit:hover {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    background: #19625d;
+    border-color: #19625d; }
+
+.social-buttons {
+  margin: 2rem 0rem; }
+
+.nav-links a {
+  text-transform: uppercase;
+  color: #248A83; }
+
+.single-product .entry-meta {
+  width: 370px;
+  font-family: Novecentos, sans-serif;
+  position: absolute;
+  left: 271px;
+  bottom: 6px;
+  padding: 4px 17px; }
 
 body {
   font-size: 16px; }
