updating readme file and some changes

--- a/themes/inhabitent/sass/_single.scss
+++ b/themes/inhabitent/sass/_single.scss
@@ -17,7 +17,7 @@
     position: relative;
 }
 
-.entry-meta {
+.single-product .entry-meta {
     background: #248a83;
     color: #fff;
     text-transform: uppercase;
@@ -81,11 +81,16 @@ a.sharing-button {
     color: $color__green-brand;
 }
 
-.single-product .entry-meta {
-    width: 370px;
-    font-family: Novecentos, sans-serif;
-    position: absolute;
-    left: 271px;
-    bottom: 6px;
-    padding: 4px 17px;
+.single-product-flex-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
+
+// .single-product .entry-meta {
+//     width: 370px;
+//     font-family: Novecentos, sans-serif;
+//     position: absolute;
+//     left: 271px;
+//     bottom: 6px;
+//     padding: 4px 17px;
+// }
