--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1419,16 +1419,14 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 250px 250px;
-  grid-gap: 1em;
-  background-color: #dff57c; }
+  grid-gap: 1em; }
   .latest-adventures ul li {
     line-height: 1;
     overflow: hidden;
     position: relative; }
     .latest-adventures ul li:nth-child(1) {
       grid-row: 1 / 3;
-      grid-column: 1 /3;
-      background-color: #c548a6; }
+      grid-column: 1 /3; }
       .latest-adventures ul li:nth-child(1) img {
         -webkit-transform: translate(-50%, -75%);
                 transform: translate(-50%, -75%);
