--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -142,3 +142,14 @@
     .type-post .entry-header {
         margin-top: 3rem;
     }
+    
+    .white-btn {
+        border: 1px solid #000;
+        color: #000;
+        text-transform: uppercase;
+        text-align: center;
+        height: auto;
+        padding: 12px 18px;
+        font-size: .9rem;
+        font-family: Novecentos, sans-serif;
+    }
