--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -126,6 +126,34 @@ body {
                     width: auto;
                 }
             }
+            &:nth-child(3) {
+                // grid-row: 2/ 3;
+                // grid-column: 5 /6;
+                img {
+                    transform: translate(-50%, -75%);
+                    left: 50%;
+                    max-height: 367px;
+                    max-width: none;
+                    position: absolute;
+                    top: 38%;
+                    transform: translate(-50%, -50%);
+                    width: auto;
+                }
+            }
+            &:nth-child(4) {
+                // grid-row: 2/ 3;
+                // grid-column: 5 /6;
+                img {
+                    transform: translate(-50%, -75%);
+                    left: 50%;
+                    max-height: 367px;
+                    max-width: none;
+                    position: absolute;
+                    top: 38%;
+                    transform: translate(-50%, -50%);
+                    width: auto;
+                }
+            }
             line-height: 1;
             overflow: hidden;
             position: relative;
