--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -104,7 +104,7 @@ body {
                 img {
                     transform: translate(-50%, -75%);
                     left: 50%;
-                    max-height: 540px;
+                    max-height: 555px;
                     max-width: none;
                     position: absolute;
                     top: 49%;
@@ -256,4 +256,27 @@ li {
     margin-bottom: 60px;
     font-size: 2.4rem;
     font-weight: 400;
+}
+
+.journal-pic-title {
+    font-family: 'Merriweather', Courier, serif;
+    font-size: 3rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 4rem;
+}
+
+.journal-pic-mid {
+    font-family: 'Merriweather', Courier, serif;
+    font-size: 2.2rem;
+    font-weight: 500;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+
+.journal-pic-small {
+    font-family: 'Merriweather', Courier, serif;
+    font-size: 1.7rem;
+    font-weight: 400;
+    text-transform: capitalize;
 }
