--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1441,7 +1441,7 @@ body {
         -webkit-transform: translate(-50%, -75%);
                 transform: translate(-50%, -75%);
         left: 50%;
-        max-height: 540px;
+        max-height: 555px;
         max-width: none;
         position: absolute;
         top: 49%;
@@ -1560,3 +1560,23 @@ li {
   margin-bottom: 60px;
   font-size: 2.4rem;
   font-weight: 400; }
+
+.journal-pic-title {
+  font-family: 'Merriweather', Courier, serif;
+  font-size: 3rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 4rem; }
+
+.journal-pic-mid {
+  font-family: 'Merriweather', Courier, serif;
+  font-size: 2.2rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  line-height: 3rem; }
+
+.journal-pic-small {
+  font-family: 'Merriweather', Courier, serif;
+  font-size: 1.7rem;
+  font-weight: 400;
+  text-transform: capitalize; }
