--- a/themes/inhabitent/sass/_single.scss
+++ b/themes/inhabitent/sass/_single.scss
@@ -30,6 +30,11 @@
     padding: 4px 17px;
 }
 
+.single .entry-meta {
+    left: 379px;
+    bottom: 6px;
+}
+
 .single .entry-header img {
     width: 100%;
     height: auto;
