--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1366,6 +1366,10 @@ input[type=search] {
   bottom: 6px;
   padding: 4px 17px; }
 
+.single .entry-meta {
+  left: 379px;
+  bottom: 6px; }
+
 .single .entry-header img {
   width: 100%;
   height: auto; }
