--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -89,6 +89,14 @@
     * btn-black
     ***************************************************/
     
+    .blog .entry-content>p {
+        margin-bottom: 4rem;
+        margin-top: 1.2rem;
+        font-family: 'Merriweather', serif;
+        font-size: 1rem;
+        line-height: 1.8rem;
+    }
+    
     .page-template-default .btn-black a {
         position: absolute;
         bottom: 11px;
