--- a/themes/inhabitent/sass/_single.scss
+++ b/themes/inhabitent/sass/_single.scss
@@ -74,9 +74,12 @@ a.sharing-button {
     background: $color__green-brand;
     box-shadow: none;
     color: #fff;
-    font-size: 1rem;
+    font-size: .9rem;
+    font-weight: 200;
     padding: 10px 20px;
     text-shadow: none;
+    margin-bottom: 3.5rem;
+    font-family: Novecentos, sans-serif;
     &:hover {
         box-shadow: none;
         background: $color__btn-green-hover;
