--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1410,9 +1410,12 @@ a.sharing-button {
   -webkit-box-shadow: none;
           box-shadow: none;
   color: #fff;
-  font-size: 1rem;
+  font-size: .9rem;
+  font-weight: 200;
   padding: 10px 20px;
-  text-shadow: none; }
+  text-shadow: none;
+  margin-bottom: 3.5rem;
+  font-family: Novecentos, sans-serif; }
   .comment-form .submit:hover {
     -webkit-box-shadow: none;
             box-shadow: none;
