--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -76,7 +76,7 @@
         text-transform: uppercase;
         text-align: center;
         height: auto;
-        padding: 12px 18px;
+        padding: 9px 18px;
         font-size: .9rem;
         font-family: 'Novecentos', sans-serif;
         &:hover {
@@ -152,7 +152,7 @@
     }
     
     .white-btn {
-        border: 1px solid #000;
+        border: 1px solid #fff;
         color: #000;
         text-transform: uppercase;
         text-align: center;
@@ -160,6 +160,21 @@
         padding: 12px 18px;
         font-size: .9rem;
         font-family: 'Novecentos', sans-serif;
+        &:hover {
+            // color: $color__background-body;
+            background: $color__green-brand;
+            border: 1px solid $color__green-brand;
+        }
+    }
+    
+    .btn.more-adv-btn {
+        display: inline-block;
+        margin: 2rem 0;
+        min-width: 235px;
+        font-size: 1.2rem;
+        &:hover {
+            background: $color__btn-green-hover;
+        }
     }
     
     h3.comment-reply-title {
