--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -799,7 +799,7 @@ a.read-more {
   text-transform: uppercase;
   text-align: center;
   height: auto;
-  padding: 12px 18px;
+  padding: 9px 18px;
   font-size: .9rem;
   font-family: 'Novecentos', sans-serif; }
   .btn-black a:hover,
@@ -866,7 +866,7 @@ a.read-more {
   margin-top: 3rem; }
 
 .white-btn {
-  border: 1px solid #000;
+  border: 1px solid #fff;
   color: #000;
   text-transform: uppercase;
   text-align: center;
@@ -874,6 +874,17 @@ a.read-more {
   padding: 12px 18px;
   font-size: .9rem;
   font-family: 'Novecentos', sans-serif; }
+  .white-btn:hover {
+    background: #248A83;
+    border: 1px solid #248A83; }
+
+.btn.more-adv-btn {
+  display: inline-block;
+  margin: 2rem 0;
+  min-width: 235px;
+  font-size: 1.2rem; }
+  .btn.more-adv-btn:hover {
+    background: #19625d; }
 
 h3.comment-reply-title {
   font-size: 1.8rem; }
@@ -1383,7 +1394,7 @@ input[type=search] {
 
 .post-template-default .entry-content {
   font-family: 'Merriweather', Courier, serif;
-  line-height: 1.7rem; }
+  line-height: 1.8rem; }
 
 .sharing-button {
   border: 1px solid #000;
