adding hover state style for latest adventures titles

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -167,6 +167,10 @@
         }
     }
     
+    .adv-btn:hover {
+        color: $color__yellow-brand;
+    }
+    
     .btn.more-adv-btn {
         display: inline-block;
         margin: 2rem 0;
