--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -102,6 +102,9 @@ body {
                 grid-row: 1 / 3;
                 grid-column: 1 /3;
                 img {
+                    // &::after {
+                    //     background-image: red;
+                    // }
                     transform: translate(-50%, -75%);
                     left: 50%;
                     max-height: 555px;
@@ -159,6 +162,17 @@ body {
             position: relative;
         }
     }
+}
+
+.adv-pic-wrapper::after {
+    background: rgba(0, 0, 0, .35);
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 
 .adventure-title {
