--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1532,6 +1532,16 @@ body {
               transform: translate(-50%, -50%);
       width: auto; }
 
+.adv-pic-wrapper::after {
+  background: rgba(0, 0, 0, 0.35);
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
+
 .adventure-title {
   margin: 1.5rem;
   position: absolute;
