--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -165,6 +165,7 @@ body {
 }
 
 .adv-pic-wrapper::after {
+    //creating shadow over the adventures images
     background: rgba(0, 0, 0, .35);
     content: "";
     height: 100%;
