editing and finalizing style for search result page

--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -150,4 +150,5 @@ table {
 .search div.entry-summary {
     font-family: 'Merriweather', serif;
     padding-right: 66px;
+    line-height: 1.8rem;
 }
