--- a/themes/inhabitent/sass/_search.scss
+++ b/themes/inhabitent/sass/_search.scss
@@ -3,6 +3,7 @@
     margin-top: 50px;
     padding-bottom: 2rem;
     padding-top: 5rem;
+    margin-bottom: -37px;
 }
 
 .search-results .entry-header a {
