--- a/themes/inhabitent/sass/_widgets.scss
+++ b/themes/inhabitent/sass/_widgets.scss
@@ -59,6 +59,7 @@
 }
 
 .search-pagination {
+    padding-top: 2rem;
     margin-top: 6rem;
     margin-bottom: 4rem;
     border-top: 1px solid $color__background-hr;
