--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -904,6 +904,22 @@ h3.comment-reply-title {
   .comment-form-comment textarea {
     margin-top: 1rem; }
 
+/**************************************************
+    * Find us
+    ***************************************************/
+.post-25 .entry-title {
+  font-size: 2.5rem;
+  margin-top: 2rem; }
+
+.post-25 .entry-content h2 {
+  font-size: 2rem;
+  margin-top: 1rem;
+  color: #2f1339; }
+
+.post-25 .entry-content p:nth-of-type(2) {
+  font-size: 1rem;
+  font-family: 'Merriweather', serif; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
