--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -76,7 +76,7 @@
         text-transform: uppercase;
         text-align: center;
         height: auto;
-        padding: 9px 18px;
+        padding: 12px 22px;
         font-size: .9rem;
         font-family: 'Novecentos', sans-serif;
         &:hover {
@@ -89,12 +89,18 @@
     * btn-black
     ***************************************************/
     
-    .blog .entry-content>p {
-        margin-bottom: 4rem;
+    .blog .entry-content p:nth-of-type(1),
+    .date .entry-content p:nth-of-type(1) {
+        margin-bottom: 2rem;
         margin-top: 1.2rem;
         font-family: 'Merriweather', serif;
         font-size: 1rem;
         line-height: 1.8rem;
+    }
+    
+    .blog .entry-content p:nth-of-type(2),
+    .date .entry-content p:nth-of-type(2) {
+        margin-bottom: 5rem;
     }
     
     .page-template-default .btn-black a {
