--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -807,7 +807,7 @@ a.read-more {
   text-transform: uppercase;
   text-align: center;
   height: auto;
-  padding: 9px 18px;
+  padding: 12px 22px;
   font-size: .9rem;
   font-family: 'Novecentos', sans-serif; }
   .btn-black a:hover,
@@ -819,12 +819,17 @@ a.read-more {
 /**************************************************
     * btn-black
     ***************************************************/
-.blog .entry-content > p {
-  margin-bottom: 4rem;
+.blog .entry-content p:nth-of-type(1),
+.date .entry-content p:nth-of-type(1) {
+  margin-bottom: 2rem;
   margin-top: 1.2rem;
   font-family: 'Merriweather', serif;
   font-size: 1rem;
   line-height: 1.8rem; }
+
+.blog .entry-content p:nth-of-type(2),
+.date .entry-content p:nth-of-type(2) {
+  margin-bottom: 5rem; }
 
 .page-template-default .btn-black a {
   position: absolute;
